[DT-318] 버튼 크기 수정
- 임시커밋

--- a/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemViewEstimation.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemViewEstimation.scss
@@ -1,2 +1,12 @@
 @import '@/assets/scss/components/import/share-list.scss';
 @import '@/assets/scss/components/import/document/document.scss';
+
+.appoint-wrap {
+  padding-top: 8px;
+}
+
+.appoint-btn {
+  width: 64px;
+  min-height: 34px;
+  @include font-size-default(15);
+}
