--- a/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemSaveReviewDelivery.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemSaveReviewDelivery.scss
@@ -1,9 +1,5 @@
-@import '@/assets/scss/components/import/add-button.scss';
-
 .appoint-wrap {
-  dt {
-    top: 32px;
-  }
+  padding-top: 8px;
 }
 
 .appoint-btn {
