--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemUsedLease.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemUsedLease.scss
@@ -32,3 +32,15 @@
     }
   }
 }
+
+.appoint-wrap {
+  dt {
+    top: 32px;
+  }
+}
+
+.appoint-btn {
+  width: 64px;
+  min-height: 34px;
+  @include font-size-default(15);
+}
