--- a/src/assets/scss/views/auto/LayerAutoLeaseOrderCarNumber.scss
+++ b/src/assets/scss/views/auto/LayerAutoLeaseOrderCarNumber.scss
@@ -1,1 +1,13 @@
 @import '@/assets/scss/components/import/basic-list.scss';
+
+.appoint-wrap {
+  dt {
+    top: 32px;
+  }
+}
+
+.appoint-btn {
+  width: 64px;
+  min-height: 34px;
+  @include font-size-default(15);
+}
