[DT-318] 버튼 크기 수정

--- a/src/assets/scss/views/auto/LayerAutoLeaseOrderDomestic.scss
+++ b/src/assets/scss/views/auto/LayerAutoLeaseOrderDomestic.scss
@@ -9,3 +9,9 @@
   min-height: 34px;
   @include font-size-default(15);
 }
+
+.appoint-btn-large {
+  width: 79px;
+  min-height: 34px;
+  @include font-size-default(15);
+}
