버튼 크기 수정
- 소스 수정

--- a/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemSaveReviewDelivery.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemSaveReviewDelivery.scss
@@ -1,5 +1,11 @@
 .appoint-wrap {
-  padding-top: 8px;
+  dt {
+    top: 32px;
+  }
+}
+
+.appoint-wrap-input {
+  padding-top: 7px;
 }
 
 .appoint-btn {
