--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReviewApprovalRequestLease.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReviewApprovalRequestLease.scss
@@ -2,8 +2,12 @@
 
 .appoint-wrap {
   dt {
-    top: 32px;
+    top: 34px;
   }
+}
+
+.appoint-wrap-input {
+  padding-top: 7px;
 }
 
 .appoint-btn {
