--- a/src/assets/scss/views/salesNewCar/LayerSalesNewCarAddContractSalesperson.scss
+++ b/src/assets/scss/views/salesNewCar/LayerSalesNewCarAddContractSalesperson.scss
@@ -1,2 +1,29 @@
 @import '@/assets/scss/components/import/search-list.scss';
 @import '@/assets/scss/components/import/empty.scss';
+
+.list-wrap {
+  position: relative;
+  margin: 0;
+  padding: 0;
+
+  &__require {
+    position: absolute;
+    left: 24px;
+    right: 0;
+    width: 3px;
+    height: 3px;
+    margin: 2px 0 0 2px;
+    border-radius: 50%;
+    background-color: $color-semantic-essential;
+    opacity: 1;
+    transition: opacity 0.2s;
+
+    &-text {
+      @include for-a11y;
+    }
+  }
+}
+
+.list-width {
+  width: 60px;
+}
