--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReviewApprovalRequestRent.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReviewApprovalRequestRent.scss
@@ -15,3 +15,9 @@
   min-height: 34px;
   @include font-size-default(15);
 }
+
+.appoint-btn-large {
+  width: 79px;
+  min-height: 34px;
+  @include font-size-default(15);
+}
