중계화면 및 아이콘 변경

--- a/src/assets/scss/components/import/image-view.scss
+++ b/src/assets/scss/components/import/image-view.scss
@@ -12,4 +12,14 @@
     height: auto;
     margin: 0 auto;
   }
+
+  &--img-full {
+    height: 100%;
+    width: auto;
+
+    img {
+      width: auto;
+      height: 100%;
+    }
+  }
 }
