--- a/src/assets/scss/components/ui/layer/FullPopup.scss
+++ b/src/assets/scss/components/ui/layer/FullPopup.scss
@@ -104,4 +104,21 @@
       background-color: $color-black;
     }
   }
+
+  &--bottom {
+    &-secondary {
+      .popup__body-inner {
+        padding: 0;
+        flex: 1;
+        height: 100%;
+        width: auto;
+      }
+
+      &:last-child {
+        .popup__body-inner {
+          padding-bottom: 0px;
+        }
+      }
+    }
+  }
 }
