--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -334,6 +334,12 @@ body,
   text-decoration: none;
 }
 
+// link-block
+.link-flex.link-flex {
+  width: auto;
+  height: 100%;
+}
+
 // nowrap
 .nowrap.nowrap {
   white-space: nowrap;
