--- a/src/assets/scss/components/import/image-view.scss
+++ b/src/assets/scss/components/import/image-view.scss
@@ -14,12 +14,14 @@
   }
 
   &--img-full {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     height: 100%;
     width: auto;
 
     img {
-      width: auto;
-      height: 100%;
+      max-height: 100%;
     }
   }
 }
