--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -61,8 +61,10 @@
       background-color: $color-navy-05;
     }
 
-    &-duodenary {
-      border-radius: 12px;
+    &-thirteenth {
+      padding: 29px;
+      border-color: $color-gray-05;
+      background-color: $color-gray-05;
     }
   }
 }
