--- a/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemSearchSalesmen.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemSearchSalesmen.scss
@@ -8,7 +8,7 @@
 
   &__require {
     position: absolute;
-    left: 24px;
+    left: 30px;
     right: 0;
     width: 3px;
     height: 3px;
@@ -26,4 +26,8 @@
 
 .list-width {
   width: 60px;
+}
+
+.appoint-wrap {
+  padding-top: 6px;
 }
