[DT-340] 거래 30건 이상인 case 추가

--- a/src/assets/scss/views/main/MainHome.scss
+++ b/src/assets/scss/views/main/MainHome.scss
@@ -230,6 +230,10 @@
       @include font-size-default(14);
       font-weight: 400;
       color: $color-gray-80;
+
+      &-block {
+        padding: 20px 0;
+      }
     }
 
     &-val {
