[DT-344] 이런 서비스는 어때요? 간격 수정

--- a/src/assets/scss/components/import/icon-list.scss
+++ b/src/assets/scss/components/import/icon-list.scss
@@ -60,6 +60,16 @@ div.icon-list__block {
     display: block;
     flex: 1;
     min-width: 0;
+
+    &--secondary {
+      display: block;
+      flex: 1;
+      min-width: 0;
+    }
+  }
+
+  &__icon + &__content--secondary {
+    margin-left: 10px;
   }
 
   &__icon + &__content {
