긴급 수정사항 반영

--- a/src/assets/scss/views/guide/LayerGuideAuthority.scss
+++ b/src/assets/scss/views/guide/LayerGuideAuthority.scss
@@ -1,1 +1,7 @@
 @import '@/assets/scss/components/import/authority.scss';
+
+.text-wrap {
+  padding: 16px 20px;
+  background-color: $color-gray-05;
+  border-radius: 12px;
+}
