--- a/src/assets/scss/views/myInfo/LayerMyInfoMarketPriceCarResult.scss
+++ b/src/assets/scss/views/myInfo/LayerMyInfoMarketPriceCarResult.scss
@@ -1,6 +1,11 @@
 @import '@/assets/scss/components/import/icon-list.scss';
+@import '@/assets/scss/components/import/join.scss';
 
 .head {
   text-align: center;
   padding: 12px 0 8px 0;
+}
+
+.join {
+  margin-top: 0px;
 }
