DT-351] 모바일-제휴사 신차 약정 완료 화면 개선

--- a/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractAutoLeaseRentalComplete.scss
+++ b/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractAutoLeaseRentalComplete.scss
@@ -1,1 +1,13 @@
 @import '@/assets/scss/components/import/icon-list.scss';
+
+.box-wrap {
+  background-color: $color-gray-15;
+  border-radius: 6px;
+  text-align: center;
+  padding: 15px;
+
+  &--text {
+    @include font-size-head(16);
+    font-weight: 400;
+  }
+}
