--- a/src/assets/scss/components/ui/common/BasicHr.scss
+++ b/src/assets/scss/components/ui/common/BasicHr.scss
@@ -24,5 +24,10 @@
       height: 1px;
       background-color: $color-gray-20;
     }
+
+    &-quinary {
+      height: 1px;
+      background-color: $color-gray-15;
+    }
   }
 }
