하나원큐 작업

--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -66,5 +66,9 @@
       border-color: $color-gray-05;
       background-color: $color-gray-05;
     }
+
+    &-fourteenth {
+      border-radius: 12px;
+    }
   }
 }
