--- a/src/assets/scss/components/ui/text/UnitText.scss
+++ b/src/assets/scss/components/ui/text/UnitText.scss
@@ -81,5 +81,19 @@
         font-weight: 900;
       }
     }
+
+    &-small-large {
+      .unit-text__left,
+      .unit-text__right,
+      .unit-text__right--secondary {
+        @include font-size-head(18);
+        font-weight: 500;
+      }
+
+      .unit-text__val {
+        @include font-size-head(28);
+        font-weight: 700;
+      }
+    }
   }
 }
