하나원큐 작업

--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -70,5 +70,11 @@
     &-fourteenth {
       border-radius: 12px;
     }
+
+    &-fifteenth {
+      border: 1px solid #eaeaea;
+      background-color: $color-gray-05;
+      border-radius: 12px;
+    }
   }
 }
