--- a/src/assets/scss/views/oneQ/PF_M05_l002.scss
+++ b/src/assets/scss/views/oneQ/PF_M05_l002.scss
@@ -1,8 +1,9 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 
-.sub {
-  margin: 2px 0 0 0;
-  @include font-size-default(13);
-  color: $color-gray-80;
-  font-weight: 300;
+.text_wrap {
+  padding-top: 20px;
+}
+
+.box_wrap {
+  padding-top: 10px;
 }
