[DT-360] "입사일" datepicker "X" 버튼 추가

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -62,12 +62,11 @@ html {
   overflow-y: scroll;
 
   &.is-scroll-blocking {
-    // iOS17 이슈로 주석처리함
-    // &,
-    // & body,
-    // & #app {
-    //   overflow: hidden;
-    // }
+    &,
+    & body,
+    & #app {
+      overflow: hidden;
+    }
     & #app {
       position: fixed;
       top: 0;
