DT-362 모바일 하나원큐 (연계) 상품안내

--- a/src/assets/scss/components/import/basic-list.scss
+++ b/src/assets/scss/components/import/basic-list.scss
@@ -128,6 +128,14 @@
     }
   }
 
+  &--none-margin {
+    > .basic-list__item {
+      & + .basic-list__item {
+        margin-top: 0px;
+      }
+    }
+  }
+
   &--fixed-width {
     > .basic-list__item {
       > .basic-list__symbol {
