--- a/src/assets/scss/views/oneQ/Q_M03_p001.scss
+++ b/src/assets/scss/views/oneQ/Q_M03_p001.scss
@@ -1,10 +1,6 @@
-@import '@/assets/scss/components/import/product-detail.scss';
-@import '@/assets/scss/components/import/basic-list.scss';
-@import '@/assets/scss/components/import/icon-list.scss';
-@import '@/assets/scss/components/import/step.scss';
 @import '@/assets/scss/components/import/illustration-img.scss';
-@import '@/assets/scss/components/import/contents-list.scss';
-@import '@/assets/scss/components/import/step.scss';
+@import '@/assets/scss/components/import/estimate-list.scss';
+@import '@/assets/scss/components/import/basic-list.scss';
 
 .bg-wrap {
   background-color: $color-navy-05;
@@ -13,13 +9,6 @@
 .bg {
   margin: -30px -20px 0 -20px;
   padding: 30px 20px 40px 20px;
-}
-
-.sub {
-  margin: 2px 0 0 0;
-  @include font-size-default(13);
-  color: $color-gray-80;
-  font-weight: 300;
 }
 
 .car-list {
@@ -55,5 +44,47 @@
     font-weight: 500;
     color: $color-green-50;
     margin-left: 12px;
+  }
+}
+
+.auto-table {
+  border-top: 1px solid $color-gray-40;
+  margin-top: 8px;
+
+  > table {
+    @include reset-table;
+
+    > tbody {
+      > tr {
+        > th {
+          padding: 9px 0;
+          border-bottom: 1px solid $color-gray-20;
+          word-break: break-all;
+          @include font-size-default(11);
+          color: $color-gray-90;
+          font-weight: 400;
+          vertical-align: middle;
+          text-align: center;
+          background-color: $color-gray-05;
+
+          &:first-child {
+            border-left: none;
+          }
+        }
+        > td {
+          padding: 11px 9px;
+          border-left: 1px solid $color-gray-20;
+          border-bottom: 1px solid $color-gray-20;
+          word-break: break-all;
+          @include font-size-default(11);
+          vertical-align: middle;
+          text-align: center;
+
+          &:first-child {
+            border-left: none;
+          }
+        }
+      }
+    }
   }
 }
