[DT-362] 모바일 하나원큐 (연계) 상품안내

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -113,9 +113,20 @@ body,
   padding: 16px 20px;
   background-color: rgba($color-white, 0);
   transition: background-color 0.2s;
+
+  &-color {
+    flex: none;
+    padding: 16px 20px;
+    background-color: rgba($color-navy-05, 0);
+    transition: background-color 0.2s;
+  }
 }
 .is-sticky .bottom-wrap {
   background-color: rgba($color-white, 1);
+
+  &-color {
+    background-color: rgba($color-navy-05, 1);
+  }
 }
 
 // inner-bottom-wrap
