--- a/src/assets/scss/components/import/estimate-list.scss
+++ b/src/assets/scss/components/import/estimate-list.scss
@@ -56,6 +56,10 @@
     display: flex;
     padding: 20px 15px;
     box-sizing: border-box;
+
+    &--row {
+      padding: 15px 20px;
+    }
   }
 
   &__block {
