[2023.12.22] 버튼 케이스 추가

--- a/src/assets/scss/components/ui/button/TextButton.scss
+++ b/src/assets/scss/components/ui/button/TextButton.scss
@@ -151,4 +151,8 @@
   &:global(.color-green) {
     @include button-theme($color-green-50);
   }
+
+  &:global(.color-navy) {
+    @include button-theme($color-navy-50);
+  }
 }
