--- a/src/assets/scss/components/ui/button/BasicButton.scss
+++ b/src/assets/scss/components/ui/button/BasicButton.scss
@@ -374,6 +374,42 @@
         }
       }
     }
+
+    &-quaternary-navy {
+      color: $color-navy-50;
+      border-color: $color-gray-20;
+      background-color: $color-gray-20;
+
+      .button__icon {
+        svg {
+          * {
+            fill: $color-black;
+          }
+        }
+      }
+
+      @include button-pressed-selector {
+        border-color: $color-gray-30;
+        background-color: $color-gray-30;
+      }
+
+      &.button--line {
+        color: $color-navy-50;
+        border-color: $color-gray-30;
+
+        .button__icon {
+          svg {
+            * {
+              fill: $color-gray-70;
+            }
+          }
+        }
+
+        @include button-pressed-selector {
+          border-color: $color-gray-50;
+        }
+      }
+    }
   }
 
   &[disabled],
