렌터카 페이지 아이콘 표기 수정

--- a/src/assets/scss/components/import/bank-brand.scss
+++ b/src/assets/scss/components/import/bank-brand.scss
@@ -24,7 +24,7 @@
     align-items: stretch;
     justify-content: flex-start;
     text-align: center;
-    padding: 10px 14px;
+    padding: 10px 12px; //241125 수정
     border-radius: 8px;
     border: 2px solid transparent;
 
