--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -16,6 +16,7 @@ $color-semantic-caution: #ec700f;
 $color-semantic-warning: #ffa514;
 $color-semantic-positive: #42a946;
 $color-semantic-accent: #0091ea;
+$color-semantic-pick: #f5edff; //241125 추가
 
 $color-blue-10: #a2c7ff;
 $color-blue-20: #89b1fe;
@@ -73,9 +74,12 @@ $color-pink-70: #f32a8b;
 $color-pink-80: #f2117d;
 $color-pink-90: #d70a6c;
 
-// 240702추가
+// 241125 추가
 $color-red-20: #ef4567;
-// //240702추가
+$color-red-90: #ff0000;
+$color-purple-10: #974af6;
+$color-purple-15: #a545ef;
+$color-purple-20: #8511c9;
 
 // line-height
 $line-height-default: 1.5;
