--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -41,6 +41,7 @@ $color-gray-70: #757575;
 $color-gray-80: #666666;
 $color-gray-90: #424242;
 
+$color-green-05: #e2f0d9; //250219 추가
 $color-green-10: #9bede9;
 $color-green-20: #2ad6ce;
 $color-green-30: #20c7bf;
@@ -52,6 +53,7 @@ $color-green-80: #056965;
 $color-green-90: #065956;
 $color-green-100: #08685d; //240926 추가
 $color-green-110: #067265; //240927 추가
+$color-green-120: #1b897c; //250219 추가
 
 $color-navy-05: #f4f6fa;
 $color-navy-10: #82a3d2;
