하나뿐인 내차찾기 테스트 프로모션 페이지

--- a/src/assets/scss/components/import/basic-list.scss
+++ b/src/assets/scss/components/import/basic-list.scss
@@ -143,4 +143,16 @@
       }
     }
   }
+  // s: 250407 추가
+  &--custom {
+    @include reset-list;
+    margin-top: 5px;
+    > .basic-list__item {
+      color: $color-black;
+      & + .basic-list__item {
+        margin-top: 0px;
+      }
+    }
+  }
+  // e:// 250407 추가
 }
