--- a/src/assets/scss/components/ui/common/BasicHr.scss
+++ b/src/assets/scss/components/ui/common/BasicHr.scss
@@ -29,5 +29,11 @@
       height: 1px;
       background-color: $color-gray-15;
     }
+
+    // s: 250407 추가
+    &-senary {
+      background-color: $color-gray-15;
+    }
+    // e:// 250407 추가
   }
 }
