--- a/src/assets/scss/components/ui/imageData/CarEmblem.scss
+++ b/src/assets/scss/components/ui/imageData/CarEmblem.scss
@@ -25,6 +25,11 @@
     &-small {
       width: 20px;
     }
+    // s: 250407 추가
+    &-mediumSmall {
+      width: 30px;
+    }
+    // e:// 250407 추가
     &-medium {
       width: 60px;
     }
