--- a/src/assets/scss/components/ui/banner/BasicBanner.scss
+++ b/src/assets/scss/components/ui/banner/BasicBanner.scss
@@ -6,6 +6,29 @@
   background-color: $color-navy-05;
   display: flex;
   align-items: center;
+  // s: 250407 추가
+  &--secondary {
+    background-color: #f4edff;
+    .banner__thumb {
+      margin: -24px -20px -24px 0px;
+    }
+    .banner__thumb-img {
+      width: 100%;
+      height: 66px;
+    }
+  }
+
+  &--tertiary {
+    background-color: #edf4ff;
+    .banner__thumb {
+      margin: -24px -20px -24px 0px;
+    }
+    .banner__thumb-img {
+      width: 100%;
+      height: 66px;
+    }
+  }
+  // e:// 250407 추가
 
   &__contents {
     flex: 1;
