하나뿐인 내차 찾기 테스트 프로모션 수정

--- a/src/assets/scss/components/ui/imageData/CarEmblem.scss
+++ b/src/assets/scss/components/ui/imageData/CarEmblem.scss
@@ -28,6 +28,13 @@
     // s: 250407 추가
     &-mediumSmall {
       width: 30px;
+      height: 30px;
+      img {
+        width: auto !important;
+        height: 100%;
+        max-width: none;
+        max-height: none;
+      }
     }
     // e:// 250407 추가
     &-medium {
