--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -11,7 +11,7 @@
   // s: 250407 추가
   &-medium {
     width: 100%;
-    height: 200px;
+    // height: 200px;
   }
   &-large {
     padding-bottom: 90%;
@@ -149,6 +149,7 @@
     // s: 250407 추가
     &-car {
       background-image: url('@/assets/images/illustration/img-car.png');
+      background-size: contain;
     }
     &-basic {
       margin: 0;
