임직원 렌터카상품 추가 수정

--- a/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
@@ -117,6 +117,28 @@
       }
     }
 
+    .event-img1 {
+      height: 42px;
+
+      img {
+        height: 100%;
+      }
+    }
+    .event-img2 {
+      height: 39px;
+
+      img {
+        height: 100%;
+      }
+    }
+    .event-img3 {
+      height: 40px;
+
+      img {
+        height: 100%;
+      }
+    }
+
     .event-con {
       color: #757575;
       font-size: 13px;
