임직원 렌터카, 툴팁 상단  영역 수정

--- a/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
@@ -1,6 +1,12 @@
 .page-text-group {
   margin-bottom: 0;
 }
+/*margin-bottom: 28px;*/
+.page-text-group-mb {
+}
+.page-pt24 {
+  padding-top: 24px;
+}
 .illustration-img-new {
   margin-left: -20px;
   margin-right: -20px;
