--- a/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
@@ -83,7 +83,7 @@
   .text-position {
     position: absolute;
     left: 0;
-    bottom: 0;
+    top: 0;
     padding: 20px 0;
     font-size: 28px;
     span {
