--- a/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LR_M07_p001.scss
@@ -197,3 +197,27 @@
 .main-title-area{
   padding-top: 20px; margin-top: 30px;
 }
+
+.img-top-new {
+  position: relative;
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-bottom: 10px;
+  background-color: #F1F3F2;
+  .text-position {
+    padding: 20px 20px;
+    font-size: 28px;
+    span {
+      font-size: 21px;
+    }
+  }
+}
+
+.illustration-img-icon{
+  width: 199px; margin: 0 auto;
+}
+.illustration-img-box {
+  margin-left: -20px;
+  margin-right: -20px;
+  background-color: #F1F3F2;
+}
