--- a/src/assets/scss/views/myLoan/My_M99_l014.scss
+++ b/src/assets/scss/views/myLoan/My_M99_l014.scss
@@ -269,6 +269,27 @@
 .basic-list__item_font13 + .basic-list__item_font13 {
   margin-top: 8px;
 }
+/*  font-weight: 400;  color: #15181f;*/
+.basic-list__symbol_7 {
+  flex: none;
+  position: relative;
+  display: block;
+  height: 1.5em;
+  margin-right: 6px;
+  min-width: 3px;
+}
+.basic-list__symbol_7::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -2px 0 0 -1px;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: #15181f;
+}
   /*font-size: 0.75rem;*/
 .basic-list__item_mt24 {
   display: flex;
