--- a/src/assets/scss/components/ui/banner/BasicBanner.scss
+++ b/src/assets/scss/components/ui/banner/BasicBanner.scss
@@ -13,7 +13,7 @@
       margin: -24px -20px -24px 0px;
     }
     .banner__thumb-img {
-      width: 100%;
+      width: 79px;
       height: 66px;
     }
   }
@@ -24,7 +24,7 @@
       margin: -24px -20px -24px 0px;
     }
     .banner__thumb-img {
-      width: 100%;
+      width: 79px;
       height: 66px;
     }
   }
@@ -48,6 +48,7 @@
 
   &__thumb {
     flex: none;
+    flex-shrink: 0;
     margin: -24px -24px -24px 24px;
     position: relative;
     z-index: 0;
@@ -60,6 +61,7 @@
         display: block;
         width: 100%;
         height: 100%;
+        max-width: 100%;
       }
     }
   }
